Most of 1.19 port